# ROS_PROJECTS

./: .gitignore  README.md
gazebo/gazebo_task1/: build.sh  run.sh
gazebo_task1/: CMakeLists.txt  README.md
gazebo_task1/model/test_robo/: model.sdf
gazebo_task1/script/: HelloPlugin.cc
gazebo_task1/world/: my_world.world
robo_v1/install/: local_setup.sh  setup.sh
robo_v1/launch/: test_robo_launch.py
robo_v1/launch/prop/worlds/: my_world.world
robo_v1/log/: latest_build
robo_v1/src/test_robo/: setup.py
robo_v1/src/test_robo/test_robo/: driver.py
ros1/ball_chaser_ws/src/: README.md
ros1/ball_chaser_ws/src/my_robot/: CMakeLists.txt  package.xml
ros1/ball_chaser_ws/src/my_robot/config/: joint_names_my_robot.yaml
ros1/ball_chaser_ws/src/my_robot/launch/: utility.launch  world.launch
ros1/ball_chaser_ws/src/my_robot/meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_right_wheel.STL  lidar_link.STL
ros1/ball_chaser_ws/src/my_robot/scripts/: ctrlr.py  driver.py
ros1/ball_chaser_ws/src/my_robot/sdf/: my_world.world
ros1/ball_chaser_ws/src/my_robot/sdf/models/ball/: model.sdf
ros1/ball_chaser_ws/src/my_robot/sdf/models/my_robot/: model.sdf  my_robot.urdf
ros1/ball_chaser_ws/src/my_robot/sdf/models/room/: model.sdf
ros1/ball_chaser_ws/src/my_robot/urdf/: my_robot.csv  my_robot.urdf  my_robot1 (copy).urdf  my_robot1.urdf  out.sdf
ros2/robo_v1/: README.md  run.sh
ros2/robo_v1/install/: local_setup.sh  setup.sh
ros2/robo_v1/launch/: test_robo_launch.py
ros2/robo_v1/log/: latest_build
(+20 files in other folders)
